# marky-mark-scheduler

./: .coveragerc  .gitignore  pyproject.toml  test.py
.github/workflows/: tests.yml
app/: config.py  constants.py  db.py  main.py  utils.py
app/abstractions/: banned_subjects_repository_interface.py  enqueuer_by_table_service_interface.py  group_repository_interface.py  message_factory_interface.py  message_sender_service_interface.py  students_group_repository_interface.py  students_subgroup_repository_interface.py
app/factories/: message_factory.py
app/models/: __init__.py  banned_subject.py  group.py  student.py  students_subgroup.py  subgroup.py
app/repositories/: banned_subjects_repository.py  groups_repository.py  students_group_repository.py  students_subgroup_repository.py
app/services/: enqueuer_by_timetable_service.py  message_sender_service.py
app/tasks/default/: tasks.py
app/tasks/schedule/: tasks.py
app/values/: subject.py
tests/: test_group_repository.py  test_students_subgroup_repository.py  test_utilities.py
tests/factories/: test_message_factory.py
tests/repositories/: conftest.py  test_banned_subjects_repository.py  test_group_repository.py  test_students_group_repository.py  test_students_subgroup_repository.py
tests/services/: test_enqueuer_service.py  test_message_service.py
tests/tasks/: test_sender.py  test_timetable.py
tests/values/: test_subject.py
